fix broken link

--- a/site/docs/tbdex/pfi/creating-quotes.mdx
+++ b/site/docs/tbdex/pfi/creating-quotes.mdx
@@ -18,7 +18,7 @@ RFQ storage was discussed in the [Exchange API Provider](docs/tbdex/pfi/anatomy-
 
 ### Find an Offering
 
-After inserting the RFQ you received into your database, you’ll want to search your offerings database for the Offering the RFQ is requesting. RFQs contain a required `offeringId` field that you can call your Offerings API provider’s `getOffering()` method to find exactly what you’re looking for. Building on the example from our [Exchange API Provider section](pfi/anatomy-of-a-pfi), your code might look like this:
+After inserting the RFQ you received into your database, you’ll want to search your offerings database for the Offering the RFQ is requesting. RFQs contain a required `offeringId` field that you can call your Offerings API provider’s `getOffering()` method to find exactly what you’re looking for. Building on the example from our [Exchange API Provider section](docs/tbdex/pfi/anatomy-of-a-pfi), your code might look like this:
 
 
 ```js
