Address last comments

--- a/site/docs/tbdex/pfi/creating-offerings.mdx
+++ b/site/docs/tbdex/pfi/creating-offerings.mdx
@@ -175,4 +175,4 @@ A sample Offering could look like this:
 ```
 
 
-Once the Offering has been generated, you can store it in your database using code as shown in the
+Once the Offering has been generated, you can store it in your database using code as shown in the [Exchange API Provider section](/docs/tbdex/pfi/anatomy-of-a-pfi#exchange-api-provider)
