provided path on Overview page

--- a/site/docs/tbdex/pfi/overview.mdx
+++ b/site/docs/tbdex/pfi/overview.mdx
@@ -4,6 +4,20 @@ sidebar_position: 1
 
 # Overview
 
-A Participating Financial Institution (PFI) is an entity that offers liquidity on the tbDEX network. PFIs make themselves known to Wallets/Agents and engage in verifying  necessary information for transaction completion with Verifiable Credentials Issuers. For more on how PFIs fit into the overall structure of tbDEX, please [refer to the tbDEX overview](docs/tbdex/#messages).
+PFIs are **P**articipating **F**inancial **I**nstitutions that offer liquidity on a tbDEX network. 
 
-This guide is intended for developers looking to implement software to participate as a PFI on the tbDEX network and aims to provide an understanding of the key SDKs, code snippets, design, and concepts of tbDEX. By the end of this guide, you’ll have what you need to begin participating on the tbDEX network.
+PFIs make themselves known to Wallet applications and engage in verifying  necessary information for transaction completion with Verifiable Credential Issuers. 
+
+For more on how PFIs fit into the overall structure of tbDEX, please [refer to the tbDEX overview](docs/tbdex/#messages).
+
+The PFI guides are intended to provide you with what you need to begin participating on the tbDEX network.
+
+## Recommended Path
+
+1. [Review Message Types](/docs/tbdex/pfi/message-types)
+2. [Install Required SDKs](/docs/tbdex/pfi/required-sdks)
+3. [Onboard as a PFI](/docs/tbdex/pfi/onboarding)
+4. [Review Anatomy of a PFI](/docs/tbdex/pfi/anatomy-of-a-pfi)
+5. [Create Offerings](/docs/tbdex/pfi/creating-offerings)
+6. [Create quotes](/docs/tbdex/pfi/creating-quotes)
+7. [Process Orders](/docs/tbdex/pfi/processing-orders)
