--- a/site/docs/tbdex/pfi/overview.mdx
+++ b/site/docs/tbdex/pfi/overview.mdx
@@ -19,5 +19,5 @@ The PFI guides are intended to provide you with what you need to begin participa
 3. [Onboard as a PFI](/docs/tbdex/pfi/onboarding)
 4. [Review Anatomy of a PFI](/docs/tbdex/pfi/anatomy-of-a-pfi)
 5. [Create Offerings](/docs/tbdex/pfi/creating-offerings)
-6. [Create quotes](/docs/tbdex/pfi/creating-quotes)
+6. [Create Quotes](/docs/tbdex/pfi/creating-quotes)
 7. [Process Orders](/docs/tbdex/pfi/processing-orders)
