improve readability of required imports

--- a/site/docs/tbdex/pfi/required-sdks.mdx
+++ b/site/docs/tbdex/pfi/required-sdks.mdx
@@ -35,5 +35,14 @@ npm i @tbdex/http-server
 To send and receive tbDEX messages, import the following classes:
 
 ```js
-import  { TbdexHttpServer, Rfq, Quote, Order, OrderStatus, Close, CallbackError, ErrorDetail } from '@tbdex/http-server'
+import { 
+    TbdexHttpServer, 
+    Rfq, 
+    Quote, 
+    Order, 
+    OrderStatus, 
+    Close, 
+    CallbackError, 
+    ErrorDetail 
+} from '@tbdex/http-server'
 ```
