general readability improvements

--- a/site/docs/tbdex/index.mdx
+++ b/site/docs/tbdex/index.mdx
@@ -43,7 +43,7 @@ There are essentially three types of actors involved in a tbDEX network:
 ![Wallet, PFI, and VC Issuer](/img/tbdex-actors.png)
 
 * **Wallet Apps:** These hold identifiers and credentials, acting as an agent to facilitate exchanges on behalf of a person seeking liquidity
-* **PFIs:** The entities offering liquidity services on the tbDEX network
+* **PFIs:** The entities offering liquidity services on a tbDEX network
 * **VC Issuers:** Organizations that act as sources of verifiable credentials
 
 ### Messages
