--- a/site/docs/tbdex/pfi/overview.mdx
+++ b/site/docs/tbdex/pfi/overview.mdx
@@ -4,13 +4,13 @@ sidebar_position: 1
 
 # Overview
 
-PFIs are **P**articipating **F**inancial **I**nstitutions that offer liquidity on a tbDEX network. 
+PFIs are **Participating Financial Institutions** that offer liquidity on a tbDEX network. 
 
-PFIs make themselves known to Wallet applications and engage in verifying  necessary information for transaction completion with Verifiable Credential Issuers. 
+PFIs make themselves known to Wallet applications and engage in verifying  necessary information for transaction completion with [Verifiable Credential](/docs/web5/learn/verifiable-credentials) Issuers. 
 
-For more on how PFIs fit into the overall structure of tbDEX, please [refer to the tbDEX overview](docs/tbdex/#messages).
+For more on how PFIs fit into the overall structure of tbDEX, please [refer to the tbDEX overview](/docs/tbdex/#messages).
 
-The PFI guides are intended to provide you with what you need to begin participating on the tbDEX network.
+The PFI guides are intended to provide you with what you need to begin participating on a tbDEX network.
 
 ## Recommended Path
 
