--- a/site/docs/tbdex/pfi/creating-quotes.mdx
+++ b/site/docs/tbdex/pfi/creating-quotes.mdx
@@ -4,21 +4,21 @@ sidebar_position: 7
 
 # Creating Quotes
 
-When your PFI receives an RFQ message, you’ll want to do the following:
+When you receive an `RFQ` message, you’ll want to do the following:
+
+1. Store the `RFQ` message in your database
+2. Get the `Offering` specified by `offeringId` in the `RFQ`
+3. Verify any claims required by the `Offering` selected
+4. Create a `Quote` and store it in your database
 
 
+### Get the Offering
 
-* Store the RFQ message in your database
-* Filter through your Offerings based on the RFQ to see if there is an Offering or many Offerings for which the RFQ would qualify
-* Verify the Wallet’s credentials as required by the Offering selected
-* Create a Quote and store it in your PFI database
+After inserting the `RFQ` into your database, you can search your database for the `Offering` the `RFQ` is requesting. 
 
-RFQ storage was discussed in the [Exchange API Provider](docs/tbdex/pfi/anatomy-of-a-pfi) section, so this section will discuss the following steps.
+RFQs contain a required `offeringId` field that you pass to your Offerings API provider’s `getOffering()` method to obtain the exact Offering. 
 
-
-### Find an Offering
-
-After inserting the RFQ you received into your database, you’ll want to search your offerings database for the Offering the RFQ is requesting. RFQs contain a required `offeringId` field that you can call your Offerings API provider’s `getOffering()` method to find exactly what you’re looking for. Building on the example from our [Exchange API Provider section](docs/tbdex/pfi/anatomy-of-a-pfi), your code might look like this:
+Building on the example from the [Exchange API Provider section](/docs/tbdex/pfi/anatomy-of-a-pfi), your code might look like this:
 
 
 ```js
@@ -38,18 +38,21 @@ async write(opts: { message: MessageKindClass }) {
        message: JSON.stringify(message)
      });
 
+//highlight-start
    if (message.kind == 'rfq') {
      const offering = await offeringApiProvider.getOffering(message.offeringId)
    }
+//highlight-end
 }
 ```
 
 
 
-### Verifying the Wallet’s Credentials
+### Verifying the Required Claims
 
-After receiving an RFQ and finding the matching Offering for it, you’ll want to verify that the Wallet satisfies the necessary requirements for the Offering. The RFQ class offers the [verifyOfferingRequirements](/docs/tbdex/api-reference/tbdex-js/protocol/classes/Rfq#verifyofferingrequirements) method to do so, which uses PEX to check that the claim or credential provided in the RFQ satisfies the presentation definition that was given on the offering. That may look like this:
+After receiving an `RFQ` and finding the matching `Offering`, you’ll want to verify that the user satisfies the necessary requirements for the `Offering`. 
 
+The `RFQ` class offers the [verifyOfferingRequirements](/docs/tbdex/api-reference/tbdex-js/protocol/classes/Rfq#verifyofferingrequirements) method to do so, which checks that the claim or credential provided in the `RFQ` satisfies the presentation definition that was specified on the `Offering`. 
 
 ```js
  function processRfq(rfq, offering) {
@@ -61,12 +64,10 @@ After receiving an RFQ and finding the matching Offering for it, you’ll want t
 }
 ```
 
+### Creating and Sending a Quote
 
-
-### Creating and Sending Your Quote
-
-Before creating your quote from the RFQ and the matching Offering, you may want to review the [protocol definition for Quotes](https://github.com/TBD54566975/tbdex/tree/main/specs/protocol#quote). With that in mind, you can then create your quote using the `Quote.create()` method as shown below:
-
+Before creating a `Quote` in response to the received `RFQ`, you may want to review the [protocol definition for Quotes](https://github.com/TBD54566975/tbdex/tree/main/specs/protocol#quote). 
+With that in mind, you can then create your quote using the `Quote.create()` method as shown below:
 
 ```js
 const quote = Quote.create(
@@ -91,8 +92,7 @@ const quote = Quote.create(
       )
 ```
 
-
-With your quote created, you’ll then want to sign it for verification purposes and write it to your own database:
+With the `Quote` created, you’ll then sign it for authorization purposes and write it to your own database:
 
 
 ```js
@@ -101,4 +101,7 @@ this.write({ message: quote as Quote})
 ```
 
 
-Currently, Wallets are not pushed updates about Quotes because wallets are not addressable; therefore the customer’s wallet will need to poll your PFI’s database in order to get the Quote from you.
+:::note
+Wallets are not pushed updates about Quotes because wallets are not addressable. 
+Therefore the Wallet will need to poll your PFI to get the Quote from you.
+:::
