--- a/site/docs/tbdex/pfi/processing-orders.mdx
+++ b/site/docs/tbdex/pfi/processing-orders.mdx
@@ -4,12 +4,11 @@ sidebar_position: 8
 
 # Processing Orders
 
-Order storage was discussed in the [Offerings API Provider](docs/tbdex/pfi/anatomy-of-a-pfi) section, so this section will discuss the following steps.
-
+As described in the [Offerings API Provider](/docs/tbdex/pfi/anatomy-of-a-pfi#offerings-api-provider) guide, you should process the orders you receive. This guide outlines how that is done.
 
 ### Provide an Initial OrderStatus
 
-Upon receipt of the Order message and after storing that message, you will want to create an initial [OrderStatus](https://github.com/TBD54566975/tbdex/tree/main/specs/protocol#orderstatus) to let the Wallet who placed the Order know what the state of their Order is:
+Upon storing the `Order` message, you will want to create an initial [OrderStatus](https://github.com/TBD54566975/tbdex/tree/main/specs/protocol#orderstatus) to update the Wallet on the status of their `Order`:
 
 
 ```js
@@ -34,17 +33,24 @@ import { Order, OrderStatus } from '@tbdex/http-server'
 ```
 
 
-As mentioned in the previous section, it isn’t possible to address the message back to the Wallet, so you’ll write it to your database and the Wallet will be responsible for polling your OrderStatus data.
+Since the Wallet application isn't addressable, you’ll write the `OrderStatus` to your database and the Wallet will poll for `OrderStatus` data.
 
 
 ### Process the Order
 
-[The Order message](https://github.com/TBD54566975/tbdex/tree/main/specs/protocol#order) will contain the information you initially stored in an Offering object that will specify the pay-in, pay-out, and rate of conversion needed. Using that information, you’ll be able to use your logic of choice to actually fulfill that order for your customer. Note that tbDEX is an exchange that facilitates transactions but does not actually provide the APIs to fulfill them - that responsibility lies with each PFI. As you deem appropriate for your customers, you can provide them with multiple OrderStatus messages using the same code as in the section above for them to poll.
+The [Order message](https://github.com/TBD54566975/tbdex/tree/main/specs/protocol#order) will contain the information you initially stored in an `Offering` object that will specify the pay-in, pay-out, and rate of conversion needed. 
+
+Using that information, you’ll be able to use your logic of choice to actually fulfill that order for your customer. 
+
+Note that tbDEX is a messaging protocol that facilitates communication to enable transactions but does not actually provide the APIs to fulfill them. 
+That responsibility lies with each PFI. 
+
+As you deem appropriate for your customers, you can provide them with multiple `OrderStatus` messages using the same code as in the section above.
 
 
 ### Close the Order
 
-When your internal logic and implementation of fulfillment has completed, you can write the Close message to your database. A close message may look as follows:
+When the `Order` has reached a terminal state (e.g. order fulfilled, order rejected, wallet canceled, etc), you can write the `Close` message to your database. Here's an example of a `Close` message:
 
 
 ```js
@@ -65,4 +71,4 @@ When your internal logic and implementation of fulfillment has completed, you ca
 ```
 
 
-After writing the Close message to your database, a Wallet will be able to know that their transaction has closed via polling.
+After writing the `Close` message to your database, the Wallet will be able to know that their transaction has closed via polling.
