--- a/site/docs/tbdex/pfi/required-sdks.mdx
+++ b/site/docs/tbdex/pfi/required-sdks.mdx
@@ -7,9 +7,9 @@ sidebar_position: 3
 To implement and operate as a PFI, you’ll need to use the following SDKs:
 
 
-* [**web5/dids**](https://www.npmjs.com/package/@web5/dids) - In order to deal with [Decentralized Identifiers (DID)](docs/web5/learn/decentralized-identifiers), including creating an identity, and performing any other required cryptographic functions, you’ll need the DID SDK.
+* [**web5/dids**](https://www.npmjs.com/package/@web5/dids) - In order to deal with [Decentralized Identifiers (DID)](/docs/web5/learn/decentralized-identifiers), including creating an identity, and performing any other required cryptographic functions, you’ll need the DID SDK.
 * [**web5/credentials**](https://www.npmjs.com/package/@web5/credentials) - As a PFI you’ll want to verify information about your customers, including things like they’re identity or whether they’re on a sanctions list. Verifiable Credentials provide a decentralized and trustworthy way of proving facts about an entity.
-* [**tbdex/server**](https://www.npmjs.com/package/@tbdex/http-server) - To send and receive messages on the tbDEX network, you’ll need a networking solution. This SDK provides convenience methods for setting up routing and networking to facilitate your PFI.
+* [**tbdex/server**](https://www.npmjs.com/package/@tbdex/http-server) - To send and receive messages on a tbDEX network, you’ll need a networking solution. This SDK provides convenience methods for setting up routing and networking to facilitate your PFI.
 
 ## Install SDKs
 To install `@web5/dids`:
