--- a/site/docs/tbdex/pfi/creating-quotes.mdx
+++ b/site/docs/tbdex/pfi/creating-quotes.mdx
@@ -18,7 +18,7 @@ After inserting the `RFQ` into your database, you can search your database for t
 
 RFQs contain a required `offeringId` field that you pass to your Offerings API provider’s `getOffering()` method to obtain the exact Offering. 
 
-Building on the example from the [Exchange API Provider section](/docs/tbdex/pfi/anatomy-of-a-pfi), your code might look like this:
+Building on the example from the [Exchange API Provider section](/docs/tbdex/pfi/anatomy-of-a-pfi#exchange-api-provider), your code might look like this:
 
 
 ```js
