adding process dep and polyfill. changed import to remove /browser

--- a/site/src/pages/open-source/contributing.mdx
+++ b/site/src/pages/open-source/contributing.mdx
@@ -104,7 +104,7 @@ The file path should match the same path as both code snippet and the actual con
 
 ```js
 import { test, beforeAll, expect, describe } from 'vitest';
-import { Web5 } from '@web5/api/browser';
+import { Web5 } from '@web5/api';
 // import your functions from your codesnippet file
 import {
   queryMusicProtocol,
