added imports from credentials package

--- a/site/docs/tbdex/wallet/required-sdks.mdx
+++ b/site/docs/tbdex/wallet/required-sdks.mdx
@@ -35,10 +35,6 @@ npm i @tbdex/http-client
 To send and receive tbDEX messages, import the following classes:
 
 ```js
-import { 
-    TbdexHttpClient, 
-    Rfq, 
-    Quote, 
-    Order
-} from '@tbdex/http-client'
+import { TbdexHttpClient, Rfq, Quote, Order} from '@tbdex/http-client';
+import { VerifiableCredential, PresentationExchange } from "@web5/credentials";
 ```
