--- a/site/docs/tbdex/wallet/managing-credentials.mdx
+++ b/site/docs/tbdex/wallet/managing-credentials.mdx
@@ -40,7 +40,7 @@ In the following example of a `requiredClaims` section of an Offering, the PFI h
           'fields': [
             //highlight-start
             {
-              'path': [ '$.type' ],
+              'path': [ '$.type[*]' ],
               'filter': {
                 'type': 'string',
                 'const': 'SanctionsCredential'
