add links to RFQ page

--- a/site/docs/tbdex/wallet/managing-credentials.mdx
+++ b/site/docs/tbdex/wallet/managing-credentials.mdx
@@ -19,7 +19,7 @@ Storing your customers' credentials in this format is sufficient for use on a tb
 
 ## Required Claims
 
-PFI Offerings contain a `requiredClaims` section that provides a definition of the credentials that must be presented as part of the RFQ message.
+PFI Offerings contain a `requiredClaims` section that provides a definition of the credentials that must be presented as part of the [RFQ message](/docs/tbdex/wallet/send-rfq).
 
 You can obtain the `requiredClaims` from an Offering via:
 
@@ -125,4 +125,4 @@ const selectedCredentials = PresentationExchange.selectCredentials({
 });
 ```
 
-The `selectedCredentials` will be a part of the RFQ that you create on behalf of your customer.
+The `selectedCredentials` will be a part of the [RFQ](/docs/tbdex/wallet/send-rfq) that you create on behalf of your customer.
