--- a/site/docs/tbdex/wallet/send-rfq.mdx
+++ b/site/docs/tbdex/wallet/send-rfq.mdx
@@ -104,7 +104,7 @@ The response contains a `status`, where success would be `202`:
 At this point, the RFQ has been successfully sent to the PFI and an **exchange** has been created.
 This exchange serves as a thread of messages between your application and the PFI regarding this transaction.
 
-Your application will poll this exchange until a message of kind `quote` appears in the exchange:
+Your application will poll this exchange until a `Quote` message appears in the exchange:
 
 ```js
 let quote;
@@ -117,8 +117,8 @@ while (!quote) {
     filter: { id: rfq.exchangeId }
   });
 
-  const exchange = exchanges.data[0];
-  quote = exchange.find(msg => msg.kind === 'quote');
+  const [ exchange ] = exchanges.data;
+  quote = exchange.find(msg => msg instanceof Quote);
 
   if (!quote) {
     // Wait 2 seconds before making another request
@@ -154,7 +154,7 @@ The Quote will be returned in JSON form:
 }
 ```
 
-Now that you've received a Quote, you can present this to your user and give them the option to place an Order.
+Now that you've received a Quote, you can present this to your customer and give them the option to [place an Order](/docs/tbdex/wallet/place-order).
 
 
 
