Apply suggestions from code review

--- a/site/docs/tbdex/wallet/place-order.mdx
+++ b/site/docs/tbdex/wallet/place-order.mdx
@@ -28,7 +28,7 @@ const order = Order.create({
 Then sign the Order with the customer's [Portable DID](/docs/web5/build/decentralized-identifiers/how-to-create-did#portable-did):
 
 ```js
-await order.sign(customer);    // Customer's PortableDID
+await order.sign(customer);    // Customer's PortableDid
 ```
 
 ## Send Order
