--- a/site/docs/tbdex/wallet/send-rfq.mdx
+++ b/site/docs/tbdex/wallet/send-rfq.mdx
@@ -154,7 +154,7 @@ The Quote will be returned in JSON form:
 }
 ```
 
-Now that you've received a Quote, you can present this to your customer and give them the option to [place an Order](/docs/tbdex/wallet/place-order).
+Now that you've received a Quote, you can present this to your user and give them the option to place an Order.
 
 
 
