Wallet Overview Guide

--- a/site/docs/tbdex/index.mdx
+++ b/site/docs/tbdex/index.mdx
@@ -6,7 +6,7 @@ tbDEX is a decentralized, permissionless liquidity discovery protocol that unloc
 
 ![illustration of tbDEX network](/img/tbdex-protocol-illustration.png)
 
-Using the tbDEX protocol, developers can build financial applications that facilitate the smooth transfer of currencies across borders. tbDEX serves as an open network protocol where anyone can seek liquidity, and Participating Financial Institutions (PFIs) can provide that liquidity while specifying the regulatory requirements needed to fulfill the request.
+Using the tbDEX protocol, developers can build financial applications that facilitate the smooth transfer of currencies across borders. tbDEX serves as an open network protocol where anyone can seek liquidity, and [Participating Financial Institutions (PFIs)](/docs/tbdex/pfi/overview) can provide that liquidity while specifying the regulatory requirements needed to fulfill the request.
 
 tbDEX is architected on Web5 infrastructure, utilizing decentralized technologies such as:
 
@@ -27,7 +27,7 @@ tbDEX isn’t just another exchange or centralized financial institution; it’s
 
 Furthermore, tbDEX cultivates a network that encourages competition among financial institutions for customers' business, offering them a choice among multiple providers. This competitive landscape incentivizes PFIs to offer more reasonable transaction fees, as they vie to attract and retain users within the tbDEX ecosystem. 
 
-The integration of financial institutions and wallet applications into one protocol ensures that every wallet has access to every participating financial institution, fostering a customer-centric environment where quality of service and cost-efficiency become key differentiators. This is transformative for liquidity companies, where the challenge to integrate with all wallets, especially smaller ones, is too high. With tbDEX, liquidity providers and aggregators can adopt the protocol once and enable thousands of wallets.
+The integration of financial institutions and [wallet applications](/docs/tbdex/wallet/overview) into one protocol ensures that every wallet has access to every participating financial institution, fostering a customer-centric environment where quality of service and cost-efficiency become key differentiators. This is transformative for liquidity companies, where the challenge to integrate with all wallets, especially smaller ones, is too high. With tbDEX, liquidity providers and aggregators can adopt the protocol once and enable thousands of wallets.
 
 
 ## How does tbDEX work?
@@ -42,8 +42,8 @@ There are essentially three types of actors involved in a tbDEX network:
 
 ![Wallet, PFI, and VC Issuer](/img/tbdex-actors.png)
 
-* **Wallet Apps:** These hold identifiers and credentials, acting as an agent to facilitate exchanges on behalf of a person seeking liquidity
-* **PFIs:** The entities offering liquidity services on a tbDEX network
+* **[Wallet Apps:](/docs/tbdex/wallet/overview)** These hold identifiers and credentials, acting as an agent to facilitate exchanges on behalf of a person seeking liquidity
+* **[PFIs:](/docs/tbdex/pfi/overview)** The entities offering liquidity services on a tbDEX network
 * **VC Issuers:** Organizations that act as sources of verifiable credentials
 
 ### Messages
