--- a/site/docs/tbdex/pfi/overview.mdx
+++ b/site/docs/tbdex/pfi/overview.mdx
@@ -6,9 +6,9 @@ sidebar_position: 1
 
 PFIs are **Participating Financial Institutions** that offer liquidity on a tbDEX network. 
 
-PFIs make themselves known to Wallet applications and engage in verifying  necessary information for transaction completion with [Verifiable Credential](/docs/web5/learn/verifiable-credentials) Issuers. 
+PFIs make themselves known to [Wallet applications](/docs/tbdex/wallet/overview) and engage in verifying  necessary information for transaction completion with [Verifiable Credential](/docs/web5/learn/verifiable-credentials) Issuers. 
 
-For more on how PFIs fit into the overall structure of tbDEX, please [refer to the tbDEX overview](/docs/tbdex/#messages).
+For more on how PFIs fit into the overall structure of tbDEX, please [refer to the tbDEX overview](/docs/tbdex/#example-scenario).
 
 The PFI guides are intended to provide you with what you need to begin participating on a tbDEX network.
 
